fix some overflow issue

--- a/src/components/Grid/Grid.scss
+++ b/src/components/Grid/Grid.scss
@@ -10,7 +10,7 @@ wd-grid {
   display: block;
   min-width: var(--grid-min-width);
   max-width: var(--grid-max-width);
-  overflow-y: hidden;
+  overflow: hidden;
   margin: auto;
   background-color: var(--grid-color);
 }
